--- a/app/src/main/res/layout/activity_service.xml
+++ b/app/src/main/res/layout/activity_service.xml
@@ -8,7 +8,7 @@
         <View
             android:id="@+id/v_bg"
             android:layout_width="0dp"
-            android:layout_height="@dimen/y250"
+            android:layout_height="@dimen/y215"
             android:background="@drawable/bg_account"></View>
 
         <include
@@ -27,23 +27,27 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="@dimen/x18"
             android:layout_marginTop="@dimen/y86"
-            android:text="余额账户(元)"
+            android:text="您好,尊敬的用户"
             android:textColor="#000000"
-            android:textSize="@dimen/x14"
+            android:textSize="@dimen/x36"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
+
         <TextView
+            android:id="@+id/tv_subtitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/y40"
-            android:text="5500.33"
-            android:textSize="@dimen/x55"
-            app:layout_constraintLeft_toLeftOf="@+id/tv_title"
+            android:layout_marginLeft="@dimen/x18"
+            android:layout_marginTop="@dimen/y10"
+            android:text="已为您提供两种联系我们的方式"
+            android:textColor="#000000"
+            android:textSize="@dimen/x15"
+            app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tv_title" />
 
         <android.support.constraint.ConstraintLayout
-            android:id="@+id/clyt1"
+            android:id="@+id/clyt_mobile"
             android:layout_width="0dp"
             android:layout_height="@dimen/y50"
             android:gravity="center_vertical"
@@ -54,10 +58,10 @@
 
             <ImageView
                 android:id="@+id/icon1"
-                android:layout_width="@dimen/x26"
-                android:layout_height="@dimen/y21"
+                android:layout_width="@dimen/x25"
+                android:layout_height="@dimen/y24"
                 android:layout_marginLeft="@dimen/x18"
-                android:background="@mipmap/icon_cash"
+                android:background="@mipmap/icon_mobile"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -66,22 +70,23 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="@dimen/x10"
-                android:text="我要提现"
+                android:text="联系电话"
                 android:textColor="#000000"
                 android:textSize="@dimen/x16"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintLeft_toRightOf="@+id/icon1"
                 app:layout_constraintTop_toTopOf="parent" />
 
-            <View
-                android:layout_width="@dimen/x7"
-                android:layout_height="@dimen/y13"
-                android:layout_gravity="right"
-                android:background="@mipmap/icon_arrow_right"
-                android:layout_marginRight="@dimen/x19"
+            <TextView
+                android:text="15903245502"
+                android:textSize="@dimen/x15"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="@dimen/x36"
+                android:textColor="#808080"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toTopOf="parent"></View>
+                app:layout_constraintTop_toTopOf="parent" />
 
             <View
                 android:layout_width="0dp"
@@ -94,21 +99,21 @@
         </android.support.constraint.ConstraintLayout>
 
         <android.support.constraint.ConstraintLayout
-            android:id="@+id/clyt2"
+            android:id="@+id/clyt_qq"
             android:layout_width="0dp"
             android:layout_height="@dimen/y50"
             android:gravity="center_vertical"
             android:orientation="horizontal"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/clyt1">
+            app:layout_constraintTop_toBottomOf="@+id/clyt_mobile">
 
             <ImageView
                 android:id="@+id/icon2"
                 android:layout_width="@dimen/x24"
                 android:layout_height="@dimen/y24"
                 android:layout_marginLeft="@dimen/x18"
-                android:background="@mipmap/icon_bill_balance"
+                android:background="@mipmap/icon_qq"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -117,22 +122,24 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="@dimen/x10"
-                android:text="我的账单"
+                android:text="联系QQ"
                 android:textColor="#000000"
                 android:textSize="@dimen/x16"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintLeft_toRightOf="@+id/icon2"
                 app:layout_constraintTop_toTopOf="parent" />
 
-            <View
-                android:background="@mipmap/icon_arrow_right"
-                android:layout_width="@dimen/x7"
-                android:layout_height="@dimen/y13"
-                android:layout_gravity="right"
-                android:layout_marginRight="@dimen/x19"
+
+            <TextView
+                android:text="804427501"
+                android:textSize="@dimen/x15"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="@dimen/x36"
+                android:textColor="#808080"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toTopOf="parent"></View>
+                app:layout_constraintTop_toTopOf="parent" />
 
             <View
 
