--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -35,12 +35,16 @@
         <com.qmuiteam.qmui.widget.QMUIRadiusImageView
             android:id="@+id/iv_avatar"
             android:layout_width="@dimen/x55"
+            app:qmui_is_circle="true"
+            app:qmui_border_width="0dp"
+            android:src="@mipmap/icon_head_normal"
             android:layout_height="@dimen/y55"
             android:layout_marginTop="@dimen/y23"
             app:layout_constraintLeft_toLeftOf="@+id/tv_title"
             app:layout_constraintTop_toBottomOf="@+id/tv_title" />
 
         <TextView
+            android:id="@+id/tv_mobile"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="@dimen/x10"
