--- a/app/src/main/res/layout/activity_my_bill.xml
+++ b/app/src/main/res/layout/activity_my_bill.xml
@@ -11,11 +11,12 @@
             android:layout_height="@dimen/y293"
             android:background="@drawable/bg_account"></View>
 
-        <include android:layout_marginTop="@dimen/y25"
+        <include
             android:id="@+id/include_toolbar"
             layout="@layout/layout_toolbar"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/y25"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"></include>
@@ -71,7 +72,7 @@
             app:layout_constraintTop_toBottomOf="@+id/tv_balance" />
 
         <TextView
-            contentPadding="#4D4D4D"
+            android:textColor="#4D4D4D"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/y5"
@@ -90,15 +91,10 @@
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/v_bg">
 
-            <TextView
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:gravity="center"
-                android:text="3个月"
-                android:textSize="@dimen/x15" />
+
 
             <TextView
+                android:id="@+id/tv_type1"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
@@ -107,21 +103,31 @@
                 android:textSize="@dimen/x15" />
 
             <TextView
+                android:id="@+id/tv_type2"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:gravity="center"
-                android:text="半年"
+                android:text="1年"
+                android:textSize="@dimen/x15" />
+
+            <TextView
+                android:id="@+id/tv_type3"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:text="2年"
                 android:textSize="@dimen/x15" />
         </LinearLayout>
 
         <android.support.v7.widget.RecyclerView
-            app:layout_constraintTop_toBottomOf="@+id/llyt_option"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
             android:id="@+id/rv_list"
             android:layout_width="0dp"
-            android:layout_height="0dp"></android.support.v7.widget.RecyclerView>
+            android:layout_height="0dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/llyt_option"></android.support.v7.widget.RecyclerView>
 
     </android.support.constraint.ConstraintLayout>
 </layout>
