--- a/app/src/main/res/layout/activity_cash.xml
+++ b/app/src/main/res/layout/activity_cash.xml
@@ -35,10 +35,10 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
+            android:id="@+id/tv_balance"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/y40"
-            android:text="5500.33"
             android:textSize="@dimen/x55"
             app:layout_constraintLeft_toLeftOf="@+id/tv_title"
             app:layout_constraintTop_toBottomOf="@+id/tv_title" />
@@ -48,7 +48,6 @@
             android:textSize="@dimen/x16"
             android:gravity="left|center_vertical"
             android:textColor="#5A5A5A"
-            android:text="提现到尾号3360储蓄卡"
             android:paddingLeft="@dimen/x16"
             app:layout_constraintTop_toBottomOf="@+id/v_bg"
             app:layout_constraintLeft_toLeftOf="parent"
@@ -58,6 +57,7 @@
             android:layout_height="@dimen/y50" />
 
         <TextView
+            android:id="@+id/tv_cash"
             android:gravity="center"
             android:text="全部提现"
             android:textSize="@dimen/x14"
